control unit component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-sliders></app-sliders>
-<app-score-board></app-score-board>
-<app-field></app-field>
+<div class="App">
+  <app-sliders></app-sliders>
+  <app-field-container></app-field-container>
+</div>
+
+
 
