--- a/src/app/components/field/field.component.html
+++ b/src/app/components/field/field.component.html
@@ -1,5 +1,4 @@
-<button (click)="handleStart()">Start</button>
-<div class="field" (click)="onUserClick($event)">
+<div class="field" (click)="onUserClick($event)" [ngStyle]="{'width': side, 'height': side}">
   <div *ngFor="let cell of gameField; let idx = index">
     <app-cell
       [current]="cell"
