--- a/src/app/components/field/field.component.css
+++ b/src/app/components/field/field.component.css
@@ -1,11 +1,10 @@
 .field{
   display: flex;
   flex-wrap: wrap;
-  width: 700px;
-  height: 700px;
+  /*width: 700px;*/
+  /*height: 700px;*/
   order: 4;
 }
-
 .success{
   font-weight: 500;
   color: #008000
