--- a/src/app/components/score-board/score-board.component.css
+++ b/src/app/components/score-board/score-board.component.css
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-items: center;
   font-size: 20px;
+  color: #808080;
+  margin: 0 auto 10px auto;
+  width: 100%;
+  order: 1;
 }
 .score-string{
   display: flex;
@@ -16,9 +20,17 @@
 .danger{
   color: red;
 }
+:host {
+  width: 100%
+}
 @keyframes rotate-winner {
   0% {transform: rotate3d(0,1,0, 0deg)}
   49.9% {transform: rotate3d(0,1,0, 90deg)}
   50% {transform: rotate3d(0,1,0, 270deg)}
   to {transform: rotate3d(0,1,0, 360deg)}
+}
+@media screen and (max-width: 380px) {
+  .score{
+    order: 3;
+  }
 }
