--- a/src/app/components/score-board/score-board.component.html
+++ b/src/app/components/score-board/score-board.component.html
@@ -2,7 +2,9 @@
   <div>Computer : {{name ? name : 'User'}}</div>
   <div *ngIf="score.winner; else noWinner">
     <div *ngIf="score.winner === 'Computer'; else userWinner" class="danger rotated-winner">Computer won</div>
-    <ng-template #userWinner class="success rotated-winner">{{score.winner}} won</ng-template>
+    <ng-template #userWinner>
+      <div class="success rotated-winner">{{score.winner}} won</div>
+    </ng-template>
   </div>
   <ng-template #noWinner>
     <div class="score-string">
