async pipe added to server presets template and to field component

--- a/src/app/components/control-unit/control-unit.component.css
+++ b/src/app/components/control-unit/control-unit.component.css
@@ -11,6 +11,13 @@
 .start-button{
   height: 40px;
 }
+::ng-deep .red-snackbar{
+  background: #e65c5c;
+  color: #fff;
+}
+::ng-deep .red-snackbar button{
+  color: #fff;
+}
 @media screen and (max-width: 380px) {
   .control-unit-container {
     height: 115px;
