--- a/src/app/components/leader-board/leader-board.component.css
+++ b/src/app/components/leader-board/leader-board.component.css
@@ -4,18 +4,22 @@
   width: 300px;
   height: 300px;
   order: 4;
-  border: 1px solid red;
 }
 .leader-board-item{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   width: 300px;
   height: 50px;
   background: #808080;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   border-radius: 5px;
   color: #eeeeee;
   cursor: pointer;
 }
 .record{
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 @media screen and (max-width: 380px) {
