http errors handling localized in error-snackbar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="App">
   <app-sliders></app-sliders>
   <app-field-container></app-field-container>
+  <app-error-snackbar></app-error-snackbar>
 </div>
 
 
